# ahillary-will-do-abs

./: .gitignore  LICENSE  README.md  report.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 162efaa3629d_user_sport_table_m2_b19.py  7b2e9d4a1c83_sport_type_description.py  a1f6c8b3e7d2_challenge_table_m6_b30.py  a3f1c9e7d215_exercise_notes.py  a4c2e8f1b693_body_cluster_user_id_fk.py  a4c7e1b9d350_sport_event_table_m5_b24.py  a7c1e3b95d20_deleted_record.py  a8c1e5f9b304_personal_record_metric.py  (+33 more)
backend/app/: main.py
backend/tests/: test_achievement_generator.py  test_achievement_plan.py  test_achievement_proof.py  test_achievement_proof_thumbnail.py  test_achievement_schema.py  test_achievement_unlock.py  test_achievements_api.py  test_achievements_scoping.py  test_activity_day_read.py  test_activity_import.py  test_activity_preview_edit.py  test_aggregates_scoping.py  test_auth.py  test_base_challenge_seed.py  test_body_measurements.py  test_body_scoping.py  test_challenge.py  test_challenge_participant.py  test_challenge_proof.py  test_challenge_sponsor.py  test_challenges_api.py  test_challenges_proofs_api.py  test_challenges_sponsors_api.py  test_clear.py  test_coach.py  test_coach_phrases.py  test_config.py  test_dashboard.py  test_db.py  test_deficit.py  test_exercise_targets.py  test_exercises.py  test_fatsecret_aggregate.py  test_fatsecret_csv.py  test_fatsecret_parse.py  test_food_import.py  test_goals.py  test_health.py  test_inbody.py  test_inbody_import.py  (+38 more)
research/: README.md  (+1 more)
(+234 files in other folders)
