[project]
name = "abs-backend"
version = "0.1.0"
description = "Личный трекер похудения и тренировок — backend (FastAPI + SQLModel + SQLite)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
